<resources>
    <string name="app_name">Simple Arithmetic Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="problems">Problems</string>
    <string name="problems_description">Type of Problems in the quiz</string>
    <string name="solve_problems">Solve the Problem</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_problem_message">One kind of problem must be selected. Selecting Addition as the default problem.</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="problem_description">The current problem in the quiz</string>
    <string name="default_problem">Addition</string>
    <string name="title_activity_settings">Settings</string>
</resources>
