<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_numberOfChoices"
        android:title="@string/number_of_choices"
        android:summary="@string/number_of_choices_description"
        android:persistent="true"
        android:defaultValue="4"/>

    <MultiSelectListPreference
        android:entries="@array/problems_list"
        android:entryValues="@array/problems_list"
        android:key="pref_problemsToInclude"
        android:title="@string/problems"
        android:summary="@string/problems_description"
        android:persistent="true"
        android:defaultValue="@array/problems_list"/>


</PreferenceScreen>